--- a/Frontend/src/assets/styles/cmps/_ImageCarousel.scss
+++ b/Frontend/src/assets/styles/cmps/_ImageCarousel.scss
@@ -62,6 +62,7 @@
         top: 50%;
         transform: translate(-50%, -50%) rotate(90deg);
         width: 40%;
+        height: 40%;
         fill: $clrPrimary1;
       }
     }
@@ -74,6 +75,7 @@
         top: 50%;
         transform: translate(-50%, -50%) rotate(-90deg);
         width: 40%;
+        height: 40%;
         fill: $clrPrimary1;
       }
     }
