--- a/Frontend/src/assets/styles/views/_GigDetails.scss
+++ b/Frontend/src/assets/styles/views/_GigDetails.scss
@@ -1,10 +1,36 @@
 .gig-details {
     color: black;
+    max-width: 1304px;
 
     .gig {
         display: flex;
-        justify-content: space-between;
         margin-block-end: 32px;
         width: 100%;
+
+        .gig-info {
+            background-color: $clrPrimary1;
+            margin-right: 9.15%;
+            width: 57.42%;
+
+            .explore-category {
+                color: $clrPrimary2;
+                margin-block-start: 30px;
+                margin-block-end: 30px;
+
+                Link {
+                    padding: rem(9px);
+                }
+
+                .divider {
+                    color: $clrPrimary2;
+                    margin-inline-start: 5px;
+                    margin-inline-end: 5px;
+                }
+            }
+
+            @media (max-width: 720px) {
+                width: 100%;
+            }
+        }
     }
 }
