--- a/Frontend/src/assets/styles/basics/_base.scss
+++ b/Frontend/src/assets/styles/basics/_base.scss
@@ -62,12 +62,12 @@ button {
   cursor: pointer;
 }
 
-// input[type='radio'] {
-//   display: none;
-// }
-// .icon {
-//     width: 13px;
-// }
+input[type='radio'] {
+  display: none;
+}
+.icon {
+    width: 13px;
+}
 input[type='date'],
 input[type='datetime-local'],
 input[type='datetime'],
@@ -122,6 +122,7 @@ input[type='number']::-moz-number-spin-down {
   color: $clrPrimary2;
   font-weight: 600;
   font-size: 1rem;
+  background: none;
   margin: 0 rem(6px) 0 0;
   min-height: rem(48px);
   padding: rem(12px) rem(16px);
