--- a/Frontend/src/assets/styles/cmps/_GigPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_GigPreview.scss
@@ -24,7 +24,7 @@
     height: 34px;
     width: 32px;
     cursor: pointer;
-    user-select: 'none';
+    user-select: none;
   }
 
   .gig-title {
