--- a/Frontend/src/assets/styles/cmps/_GigPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_GigPreview.scss
@@ -21,8 +21,8 @@
     background: none;
     right: rem(6px);
     top: rem(6px);
-    height: 34px;
-    width: 32px;
+    height: rem(34px);
+    width: rem(32px);
     cursor: pointer;
     user-select: none;
   }
