--- a/Frontend/src/assets/styles/views/_GigDetails.scss
+++ b/Frontend/src/assets/styles/views/_GigDetails.scss
@@ -1,36 +1,41 @@
 .gig-details {
-    color: black;
-    max-width: 1304px;
+  color: black;
+  max-width: 1304px;
 
-    .gig {
-        display: flex;
-        margin-block-end: 32px;
-        width: 100%;
+  //     display: grid;
+  //    grid-template-columns: 3fr 5fr;
+  display: flex;
 
-        .gig-info {
-            background-color: $clrPrimary1;
-            margin-right: 9.15%;
-            width: 57.42%;
+  margin-block-end: 32px;
+  width: 100%;
 
-            .explore-category {
-                color: $clrPrimary2;
-                margin-block-start: 30px;
-                margin-block-end: 30px;
+  .gig-details-main {
+    background-color: $clrPrimary1;
+    margin-inline-end: 5.5%;
+    width: 57.42%;
 
-                Link {
-                    padding: rem(9px);
-                }
+    .explore-category {
+      color: $clrPrimary2;
+      margin-block-start: 30px;
+      margin-block-end: 30px;
 
-                .divider {
-                    color: $clrPrimary2;
-                    margin-inline-start: 5px;
-                    margin-inline-end: 5px;
-                }
-            }
+      Link {
+        padding: rem(9px);
+      }
 
-            @media (max-width: 720px) {
-                width: 100%;
-            }
-        }
+      .divider {
+        color: $clrPrimary2;
+        margin-inline-start: 5px;
+        margin-inline-end: 5px;
+      }
     }
+
+    @media (max-width: 720px) {
+      width: 100%;
+      .gig-aside {
+        position: static;
+      }
+    }
+  }
+  // }
 }
