--- a/Frontend/src/assets/styles/cmps/_UserMsg.scss
+++ b/Frontend/src/assets/styles/cmps/_UserMsg.scss
@@ -26,9 +26,8 @@
         border-radius: 0 0 10px 10px;
         border: 1px solid rgba(0, 0, 0, 0.1);
         border-top: none;
-        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
-
-        display: flex;
+        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.5);
+        opacity: 0.9;
         justify-content: center;
         align-items: center;
 
