further pixel perfect work on header

--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -279,6 +279,16 @@
                 width: 45%;
             }
         }
+
+        .container {
+            .logo-dropdown-area {
+                i {
+                    @media(min-width: 1151px) {
+                        display: none;
+                    }
+                }
+            }
+        }
     }
 
     .category-nav {
