--- a/Frontend/src/assets/styles/cmps/_SearchBar.scss
+++ b/Frontend/src/assets/styles/cmps/_SearchBar.scss
@@ -52,7 +52,7 @@
 
             input[type="text"] {
                 width: 90%;
-                padding: 0.5em;
+                padding: 10px 2px 10px 16px;
                 border-radius: 5px 0px 0px 5px;
                 border: 1px solid $clrPrimary2;
                 font-size: 16px;
@@ -64,7 +64,7 @@
 
             button {
                 margin: 0;
-                padding: 1em 1.5em;
+                padding: 8px 16px;
                 border-radius: 0px 5px 5px 0px;
                 border: 1px solid $clrPrimary2;
                 border-left: none;
@@ -72,6 +72,12 @@
 
                 &:hover {
                     opacity: 0.8;
+                }
+
+                img {
+                    width: 16px;
+                    height: 16px;
+                    align-self: center;
                 }
             }
         }
