fixed heart icon in gigdetails and fixed continue button as well

--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -22,7 +22,7 @@
 @import "cmps/GigNavbar";
 @import "cmps/GigDetailsHeader";
 @import "cmps/AboutSeller";
-@import "cmps/GigOrder";
+@import "cmps/GigDetailsAside";
 @import "cmps/GigReviews";
 @import "cmps/ShareGigModal";
 
