--- a/Frontend/src/assets/styles/cmps/_GigReviews.scss
+++ b/Frontend/src/assets/styles/cmps/_GigReviews.scss
@@ -47,8 +47,9 @@
     .pfp {
         height: 48px;
         width: 48px;
-        border-radius: 24px;
+        border-radius: 50%;
         margin-inline-end: 16px;
+        object-fit: cover;
     }
     .country{
         display: flex;
