--- a/Frontend/src/assets/styles/cmps/_SearchBar.scss
+++ b/Frontend/src/assets/styles/cmps/_SearchBar.scss
@@ -49,16 +49,21 @@
         .search-bar {
             height: 42px;
             align-self: center;
+            flex: 1;
+            width: 100%;
+            margin-left: 1.5em;
+            margin-right: 3em;
 
             input[type="text"] {
-                width: 90%;
+                width: calc(100% - 49px);
                 padding: 10px 2px 10px 16px;
                 border-radius: 5px 0px 0px 5px;
-                border: 1px solid $clrPrimary2;
+                border: 1px solid $clrSecondary45;
                 font-size: 16px;
 
                 &:focus {
                     outline: none;
+                    border: 1px solid $clrPrimary2;
                 }
             }
 
