home page pixel perfect works

--- a/Frontend/src/assets/styles/cmps/_ServicesCarousel.scss
+++ b/Frontend/src/assets/styles/cmps/_ServicesCarousel.scss
@@ -4,6 +4,7 @@
         overflow: visible;
         max-width: 1400px;
         margin: auto;
+        margin-bottom: 4.5em;
 
         h2 {
             font-size: 32px;
