--- a/Frontend/src/assets/styles/views/_HomePage.scss
+++ b/Frontend/src/assets/styles/views/_HomePage.scss
@@ -6,20 +6,26 @@
 
         .companies {
             justify-content: center;
-            max-width: 1400px;
             margin: 0 auto;
             align-items: center;
+            width: fit-content;
 
             h4 {
                 margin: 0;
                 color: $clrSecondary4;
                 font-weight: bold;
                 font-family: Arial, Helvetica, sans-serif;
+                padding-right: 20px;
             }
 
             img {
                 width: auto;
                 height: auto;
+                padding-right: 60px;
+
+                &:first-child {
+                    padding-left: 20px;
+                }
             }
         }
     }
@@ -73,7 +79,7 @@
     }
 
     .home-categories-section {
-        padding: 1em 2em;
+        padding: 6em 2em;
         max-width: 1400px;
         margin: auto;
 
@@ -125,6 +131,8 @@
     }
 
     .join-wrapper {
+        margin-bottom: 5em;
+
         .join-section {
             width: 100%;
             max-width: 1400px;
