--- a/Frontend/src/assets/styles/cmps/_GigDetailsAside.scss
+++ b/Frontend/src/assets/styles/cmps/_GigDetailsAside.scss
@@ -136,6 +136,7 @@
       align-items: center;
       padding: 0.75rem 1.5rem;
       width: 100%;
+      line-height: 100%;
       background-color: $clrPrimary3;
       color: $clrPrimary1;
       border: 1px solid $clrPrimary3;
