--- a/Frontend/src/assets/styles/cmps/_MenuFilterContent.scss
+++ b/Frontend/src/assets/styles/cmps/_MenuFilterContent.scss
@@ -17,9 +17,9 @@
 
   .content-scroll {
     max-height: 25vh;
+    width: rem(350px);
     overflow-y: scroll;
     padding: 24px;
-    // position: relative;
     top: -8px;
     transition: all 0.24s cubic-bezier(0.215, 0.61, 0.355, 1);
     transition-delay: 0.24s;
