removed redundant files

--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -3,7 +3,7 @@ $clrPrimary1: #fff;
 $clrPrimary2: #222325;
 $clrPrimary3: #000;
 
-$clrSecondary0:#FAFAFA;
+$clrSecondary0: #FAFAFA;
 $clrSecondary1: #f5f5f5;
 $clrSecondary2: #dadbdd;
 $clrSecondary3: #ced1d6;
@@ -16,6 +16,7 @@ $clrSecondary8: #404145;
 $clrSecondary9: #f1fdf7;
 $clrSecondary10: #e4e5e7;
 $clrSecondary11: #95979d;
+$clrSecondary12: #f7f7f7;
 
 $bgColor1: #0a4226;
 $bgColor2: #2dd12d;
