--- a/Frontend/src/assets/styles/views/_UserProfile.scss
+++ b/Frontend/src/assets/styles/views/_UserProfile.scss
@@ -5,5 +5,65 @@
         padding-top: 32px;
         padding-bottom: 32px;
         max-width: 1240px;
+
+        .user-info {
+            position: relative;
+            color: $clrPrimary2;
+
+            .info-block {
+                align-items: center;
+                justify-content: space-between;
+                width: 400px;
+                height: 360px;
+                padding: 30px;
+                background-color: $clrPrimary1;
+                border: 1px solid $clrSecondary2;
+                margin-block-end: 20px;
+
+                &:nth-child(2) {
+                    justify-content: start;
+                    align-items: start;
+
+                    p {
+                        margin: 0.5em 0;
+                        width: 100%;
+                        height: 100%;
+                    }
+
+                    .description-area {
+                        width: 22.5em;
+                        height: 260px;
+                        border: none;
+                        margin-left: -12px;
+                        margin-top: 0;
+                    }
+                }
+
+                img {
+                    width: 150px;
+                    height: 150px;
+                    border-radius: 50%;
+                }
+
+                h2 {
+                    text-align: center;
+                    width: 100%;
+                    border-bottom: 1px solid $clrSecondary2;
+                    text-transform: capitalize;
+                }
+
+                .info-line {
+                    justify-content: space-between;
+                    width: 100%;
+
+                    span {
+                        img {
+                            height: 16px;
+                            width: 14px;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
