--- a/Frontend/src/assets/styles/basics/_helpers.scss
+++ b/Frontend/src/assets/styles/basics/_helpers.scss
@@ -115,11 +115,11 @@
 }
 
 .bg-co-black {
-  background-color: #000;
+  background-color: $clrPrimary2;
 }
 
 .co-white {
-  color: #fff;
+  color: $clrPrimary1;
 }
 
 .liked {
