--- a/Frontend/src/assets/styles/cmps/_GigPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_GigPreview.scss
@@ -1,6 +1,6 @@
 .gig-preview {
   display: grid;
-  background-color: #fff;
+  background-color: $clrPrimary1;
   border-radius: 0.5em;
   min-width: rem(245px);
   width: 100%;
