--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $clrPrimary1: #fff;
 $clrPrimary2: #222325;
+$clrPrimary4:  #333;
 $clrPrimary3: #000;
 
 $clrSecondary0: #FAFAFA;
@@ -17,6 +18,7 @@ $clrSecondary9: #f1fdf7;
 $clrSecondary10: #e4e5e7;
 $clrSecondary11: #95979d;
 $clrSecondary12: #f7f7f7;
+$clrSecondary13:#e0e0e0;
 
 $bgColor1: #0a4226;
 $bgColor2: #2dd12d;
