--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -77,9 +77,9 @@
         border: 1px solid;
 
         &:hover {
-          background-color: #1dbf73;
-          color: #fff !important;
-          border-color: #1dbf73 !important;
+          background-color: $bgColor3;
+          color: $clrPrimary1 !important;
+          border-color: $bgColor3 !important;
         }
       }
 
@@ -103,8 +103,8 @@
           position: absolute;
           top: 150%;
           right: 0;
-          background-color: #fff;
-          border: 1px solid #ddd;
+          background-color: $clrPrimary1;
+          border: 1px solid $clrSecondary1;
           box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
           z-index: 10;
 
@@ -114,7 +114,7 @@
             height: 0;
             border-style: solid;
             border-width: 5px 17px 17px 17px;
-            border-color: transparent transparent #ddd transparent;
+            border-color: transparent transparent $clrSecondary1 transparent;
             position: absolute;
             top: -22px;
             right: -1px;
@@ -127,7 +127,7 @@
             height: 0;
             border-style: solid;
             border-width: 4px 16px 16px 16px;
-            border-color: transparent transparent #fff transparent;
+            border-color: transparent transparent $clrSecondary1 transparent;
             position: absolute;
             top: -20px;
             right: 0;
@@ -137,7 +137,7 @@
           a {
             display: block;
             padding: 10px 15px;
-            color: #333;
+            color: $clrSecondary9;
           }
         }
 
