--- a/Frontend/src/assets/styles/cmps/_LoginSignup.scss
+++ b/Frontend/src/assets/styles/cmps/_LoginSignup.scss
@@ -72,7 +72,7 @@
 
                 div {
                     label {
-                        color: #404145;
+                        color: $clrSecondary8;
                         font-weight: 600;
                         margin-bottom: 0.3em;
                     }
