--- a/Frontend/src/assets/styles/cmps/_MenuFilterContent.scss
+++ b/Frontend/src/assets/styles/cmps/_MenuFilterContent.scss
@@ -1,6 +1,6 @@
 .menu-filter-content {
-  background: #fff;
-  border: 1px solid #e4e5e7;
+  background: $clrPrimary1;
+  border: 1px solid $clrSecondary10;
   border-radius: 8px;
   box-shadow: 0 12px 18px rgba(0, 0, 0, 0.14);
   box-sizing: border-box;
@@ -37,7 +37,7 @@
           display: flex;
           align-items: center;
           border-radius: 8px;
-          color: #404145;
+          color: $clrSecondary8;
           cursor: pointer;
           // font-size: 14px;
           font-weight: 600;
@@ -54,7 +54,7 @@
 
           .radio-btn {
             display: inline-block;
-            border: 1px solid #b5b6ba;
+            border: 1px solid $clrSecondary4;
             border-radius: 50%;
             cursor: pointer;
             height: 22px;
@@ -80,11 +80,11 @@
 
         .radio-item.selected {
           .radio-btn {
-            border: 2px solid #222325;
+            border: 2px solid $clrPrimary2;
           }
 
           .radio-btn::after {
-            background: #222325;
+            background: $clrPrimary2;
           }
         }
       }
@@ -133,7 +133,7 @@
   .apply-row {
     display: flex;
     align-items: center;
-    border-top: 1px solid #e4e5e7;
+    border-top: 1px solid $clrSecondary10;
     box-shadow: 0 0.75em rem(18px) rgba(0, 0, 0, 0.14);
     gap: 16px;
     justify-content: end;
@@ -156,7 +156,7 @@
     }
 
     .apply:hover {
-      background: #404145;
+      background: $clrSecondary8;
     }
   }
 }
