--- a/Frontend/src/assets/styles/cmps/_UserOrders.scss
+++ b/Frontend/src/assets/styles/cmps/_UserOrders.scss
@@ -7,14 +7,14 @@
     table {
         width: 100%;
         border-collapse: collapse;
-        border: 1px solid #e0e0e0;
+        border: 1px solid $clrSecondary13;
     }
 
     th,
     td {
         padding: 1em;
         text-align: center;
-        border: 1px solid #e0e0e0;
+        border: 1px solid $clrSecondary13;
 
         &:not(:last-child),
         &:not(:first-child) {
@@ -24,7 +24,7 @@
     }
 
     thead tr {
-        background-color: #f5f5f5;
+        background-color: $clrSecondary1;
     }
 
     th {
@@ -32,7 +32,7 @@
     }
 
     td {
-        color: #333;
+        color: $clrPrimary4;
 
         img {
             width: 50%;
