--- a/Frontend/src/assets/styles/views/_HomePage.scss
+++ b/Frontend/src/assets/styles/views/_HomePage.scss
@@ -79,7 +79,6 @@
     }
 
     .home-categories-section {
-        padding: 6em 2em;
         max-width: 1400px;
         margin: auto;
 
@@ -89,7 +88,8 @@
             font-size: 32px;
             line-height: 120%;
             color: $clrSecondary8;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'macan-bold';
+            font-weight: 100;
         }
 
         div {
@@ -124,7 +124,7 @@
 
             p {
                 margin-top: 0.5em;
-                font-family: Arial, Helvetica, sans-serif;
+                font-family: 'macan-regular';
                 color: $clrPrimary2;
             }
         }
