--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -137,7 +137,7 @@
           a {
             display: block;
             padding: 10px 15px;
-            color: $clrSecondary9;
+            color: $clrPrimary4;
           }
         }
 
