--- a/Frontend/src/assets/styles/cmps/_PaymentDetails.scss
+++ b/Frontend/src/assets/styles/cmps/_PaymentDetails.scss
@@ -97,10 +97,17 @@
   }
   .three{
     border-block-start: 0;
+    border-block-end: 0;
     box-shadow: inset 0 2px 4px rgba(0,0,0,.06);
-    border-radius: 0 0 4px 4px;
     input{
       margin-block-end:16px;
     }
+  }
+  
+  .four{
+    background-color: $clrPrimary1;
+    border-radius: 0 0 4px 4px;
+    border-block-start: 1px solid $clrSecondary2;
+    border-block-end: 1px solid $clrSecondary2;
   }
 }
