--- a/Frontend/src/assets/styles/cmps/_GigReviews.scss
+++ b/Frontend/src/assets/styles/cmps/_GigReviews.scss
@@ -1,5 +1,5 @@
 .gig-reviews {
-  background-color: white;
+  background-color: $clrPrimary1;
   color: $clrPrimary2;
 
   .title {
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
     .stars-input {
       justify-content: center;
       margin-bottom: 0.5em;
@@ -24,7 +25,6 @@
     }
 
     .text {
-      // min-height: 120px;
       margin: 0 auto;
       margin-bottom: 1em;
       margin-block-start: 1em;
@@ -38,7 +38,8 @@
 }
 
 .reviews {
-   margin-block-start: 1em;
+  margin-block-start: 1em;
+
   .gig-review {
     display: flex;
     flex-direction: row;
@@ -46,53 +47,64 @@
     border-block-start: 1px solid $clrSecondary2;
     padding: 40px 0;
 
-    .username{
-        font-weight: bold;
+    .username {
+      font-weight: bold;
     }
+
     .pfp {
-        height: 48px;
-        width: 48px;
-        border-radius: 50%;
-        margin-inline-end: 16px;
-        object-fit: cover;
+      height: 48px;
+      width: 48px;
+      border-radius: 50%;
+      margin-inline-end: 16px;
+      object-fit: cover;
+      min-width: 48px;
     }
-    .country{
-        display: flex;
-        align-items: center;
-        font-size: 14px;
-        color: $clrSecondary6;
-        img {
-            margin-inline-end: 0.5em;
-            height: 20px;
-            width: 20px;
-          }
+
+    .country {
+      display: flex;
+      align-items: center;
+      font-size: 14px;
+      color: $clrSecondary6;
+
+      img {
+        margin-inline-end: 0.5em;
+        height: 20px;
+        width: 20px;
+      }
     }
+
     .review-details {
       display: flex;
       align-items: center;
       margin-block-start: 20px;
+
       .stars {
         margin: 0;
-        .rating{
-            font-weight: 500;
+
+        .rating {
+          font-weight: 500;
         }
+
         img {
           margin-inline-end: 4px;
           height: 14px;
           width: 14px;
         }
       }
-      .divider{
+
+      .divider {
         margin: 0 8px;
       }
-      .time-ago{
+
+      .time-ago {
         font-size: 14px;
         line-height: 21px;
         color: $clrSecondary6;
       }
     }
-    .comment{
-        line-height: 1.5em;
+
+    .comment {
+      line-height: 1.5em;
     }
   }
 }
