--- a/Frontend/src/assets/styles/basics/_base.scss
+++ b/Frontend/src/assets/styles/basics/_base.scss
@@ -2,11 +2,6 @@
   box-sizing: border-box;
 }
 
-// ::selection {
-//     background-color: $clr1;
-//     color: $clr6;
-// }
-
 html {
   font-family: 'macan-regular';
   line-height: 1.6;
@@ -57,6 +52,7 @@ Link,
 a {
   color: $clrSecondary8;
 }
+
 button {
   border: 0;
   cursor: pointer;
@@ -65,9 +61,17 @@ button {
 input[type='radio'] {
   display: none;
 }
+
 .icon {
   width: 13px;
 }
+
+i {
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+}
+
 input[type='date'],
 input[type='datetime-local'],
 input[type='datetime'],
@@ -94,6 +98,7 @@ textarea {
   transition: 0.15s ease-in-out;
   width: 8em;
 }
+
 input[type='number'] {
   border: none;
   outline: none;
@@ -104,11 +109,13 @@ input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   appearance: none;
 }
+
 input[type='number']::-moz-number-spin-up,
 input[type='number']::-moz-number-spin-down {
   -moz-appearance: textfield;
   -moz-appearance: none;
 }
+
 .btn {
   text-decoration: none;
   display: grid;
@@ -147,4 +154,3 @@ input[type='number']::-moz-number-spin-down {
     background-color: $clrSecondary5;
   }
 }
-
