--- a/Frontend/src/assets/styles/cmps/_UserPreview.scss
+++ b/Frontend/src/assets/styles/cmps/_UserPreview.scss
@@ -67,9 +67,11 @@
       display: flex;
       gap: 0.75em;
       flex-direction: row;
-      align-items: baseline;
+      align-items: center;
 
       .rating-score {
+        align-items: baseline;
+
         .rate {
           padding: 0 0.25em;
         }
@@ -92,7 +94,6 @@
     width: 6rem;
     height: 6rem;
     border-radius: 50%;
-    // display: block;
   }
 
   .user-gig-details-2-wrapper {
@@ -126,9 +127,11 @@
       display: flex;
       gap: 0.75em;
       flex-direction: row;
-      align-items: baseline;
+      align-items: center;
 
       .rating-score {
+        align-items: baseline;
+
         .rate {
           padding: 0 0.25em;
         }
