small catTag tweak

--- a/Frontend/src/assets/styles/views/_GigDetails.scss
+++ b/Frontend/src/assets/styles/views/_GigDetails.scss
@@ -15,6 +15,7 @@
       margin-block-end: 30px;
       padding-top: 12px;
       font-size: 14px;
+      align-items: center;
 
       Link {
         padding: rem(9px);
