minor code refactor

--- a/Frontend/src/assets/styles/cmps/_PaymentInfo.scss
+++ b/Frontend/src/assets/styles/cmps/_PaymentInfo.scss
@@ -49,6 +49,7 @@
       .gig-quality {
         display: flex;
         align-items: center;
+        gap: 10px;
 
         img {
           width: 14px;
@@ -66,6 +67,7 @@
       span {
         display: flex;
         align-items: center;
+        gap: 10px;
       }
 
       img {
